row order start from 1

--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -59,7 +59,7 @@
               <tbody>
                 <tr ng-repeat="flight in flights">
                   <!-- <td>{{flight.row}}</td> -->
-                  <td>{{$index}}</td>
+                  <td>{{$index+1}}</td>
                   <td>{{flight.time}}</td>
                   <td>{{flight.port}}</td>
                   <!-- <td>{{flight.type}}</td> -->
